--- a/index.html
+++ b/index.html
@@ -21,60 +21,69 @@
 <canvas id="canvas"></canvas>
 
 <script>
-
-
-    function getCurrentPageMousePosition(e) {
-        return {
-            x: e.pageX,
-            y: e.pageY
-        };
-    }
-
-
-    function getCurrentCanvasMousePosition(e, canvasElem) {
-        if (e.originalEvent.changedTouches != null && canvasElem != null) {
-            var rect = canvasElem.getBoundingClientRect();
-            return {
-                x: e.originalEvent.changedTouches[0].clientX - rect.left,
-                y: e.originalEvent.changedTouches[0].clientY - rect.top
-            };
-        } else if (e.clientX || e.clientX === 0 && canvasElem != null) {
-            var rect = canvasElem.getBoundingClientRect();
-            return {
-                x: e.clientX - rect.left,
-                y: e.clientY - rect.top
-            };
-        } else {
-            console.log("Error: Invalid state");
-        }
-    }
-
-
-    $("#" + "canvas").mousedown(function (e) {
-        e.preventDefault();
-
-        var canvasElem = $("#" + "canvas")[0];
-        const pageMousePosition = getCurrentPageMousePosition(e);
-        const canvasMousePosition = getCurrentCanvasMousePosition(e, canvasElem);
-        console.log(pageMousePosition)
-        console.log(canvasMousePosition)
-
-        //canvasMouseDownEvent(pageMousePosition, canvasMousePosition);
-    });
-
-    function tomdrawlin() {
-        var c = document.getElementById("myCanvas");
-        var ctx = c.getContext("2d");
-        ctx.beginPath();
-        ctx.moveTo(0, 0);
-        ctx.lineTo(300, 150);
-        ctx.stroke();
-    }
+var g_p;
 
 
 var imgw = 100;
 var imgh = 100;
 var imgsrc = "image8-2.webp";
+
+function getCurrentPageMousePosition(e) {
+    return {
+        x: e.pageX,
+        y: e.pageY
+    };
+}
+
+
+function getCurrentCanvasMousePosition(e, canvasElem) {
+    if (e.originalEvent.changedTouches != null && canvasElem != null) {
+        var rect = canvasElem.getBoundingClientRect();
+        return {
+            x: e.originalEvent.changedTouches[0].clientX - rect.left,
+            y: e.originalEvent.changedTouches[0].clientY - rect.top
+        };
+    } else if (e.clientX || e.clientX === 0 && canvasElem != null) {
+        var rect = canvasElem.getBoundingClientRect();
+        return {
+            x: e.clientX - rect.left,
+            y: e.clientY - rect.top
+        };
+    } else {
+        console.log("Error: Invalid state");
+    }
+}
+
+function plotImagePoints(yval) {
+    var output = []
+    for (i = 0 ; i < imgw; i++) {
+        output.push(g_p[yval*imgw + i])
+    }
+    plotPoints( output )
+}
+
+$("#" + "canvas").mousedown(function (e) {
+    e.preventDefault();
+
+    var canvasElem = $("#" + "canvas")[0];
+    const pageMousePosition = getCurrentPageMousePosition(e);
+    const canvasMousePosition = getCurrentCanvasMousePosition(e, canvasElem);
+    console.log(pageMousePosition)
+    console.log(canvasMousePosition)
+
+    //canvasMouseDownEvent(pageMousePosition, canvasMousePosition);
+    plotImagePoints(canvasMousePosition.y)
+});
+
+function tomdrawlin() {
+    var c = document.getElementById("myCanvas");
+    var ctx = c.getContext("2d");
+    ctx.beginPath();
+    ctx.moveTo(0, 0);
+    ctx.lineTo(300, 150);
+    ctx.stroke();
+}
+
 
 function getPixels() {
     var img = new Image();
@@ -102,41 +111,43 @@ function toBlackAndWhite(imageData) {
 }
 
 function main() {
-    var p = getPixels()
+    g_p = toBlackAndWhite(getPixels())
 
     for (i = 0; i < imgh; i++) {
         for (j = 0; j < imgw; j++) {
 
         }
     }
-    console.log(p.length)
+}
+
+function plotPoints(inputArr){
+    labels = []
+    for (i = 0; i < inputArr.length; i++)
+    {
+               labels.push(i)
+    }
+    // Initialize a Line chart in the container with the ID chart1
+    new Chartist.Line('#chart1', {
+        labels: labels,
+        series: [inputArr]
+    });
 }
 
 
 </script>
 <style>
 .ct-chart {
-    width: 100px;
-    height: 100px;
+    width: 600px;
+    height: 400px;
 
 }
 </style>
 <body>
 <div class="ct-chart ct-golden-section" id="chart1" width="100"></div>
-<div class="ct-chart ct-golden-section" id="chart2" width="100"></div>
+
 
 <script>
-    // Initialize a Line chart in the container with the ID chart1
-    new Chartist.Line('#chart1', {
-        labels: [1, 2, 3, 4],
-        series: [[100, 120, 180, 200]]
-    });
 
-    // Initialize a Line chart in the container with the ID chart2
-    new Chartist.Bar('#chart2', {
-        labels: [1, 2, 3, 4],
-        series: [[5, 2, 8, 3]]
-    });
 </script>
 
 <h1>Hello, world!</h1>
