--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
     <title>Hello, world!</title>
 </head>
 
-<canvas id="canvas" width="800" height="600"></canvas>
+<div>
+    <canvas id="canvasImg1" width="200" height="200"></canvas>
+    <canvas id="canvasImg1UI" width="200" height="200"></canvas>
+</div>
+
+<div>
+    <canvas id="canvasImg2" width="200" height="200"></canvas>
+    <canvas id="canvasImg2UI" width="200" height="200"></canvas>
+
+</div>
+
+
+<div>imagemods</div>
 <canvas id="imageMods" width="200" height="200"></canvas>
 
 <style>
