First almost working example

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         <canvas id="canvasImg2Result" class="canvasInline" width="200" height="200"></canvas>
         <canvas id="canvasImg2UIResult" class="canvasInline" width="200" height="200"></canvas>
     </div>
+    <div class="canvasWrapper" width="200" height="200">
+        <canvas id="canvasOverlay" class="canvasInline" width="200" height="200"></canvas>
+        <canvas id="canvasOverlayUIResult" class="canvasInline" width="200" height="200"></canvas>
+    </div>
 </div>
 
 <canvas style="display: none" id="imageMods" width="200" height="200"></canvas>
